# actuarial_cli_hub

./: .gitignore  README.md  pyproject.toml
docs/: adapter-catalog.md  add-a-wrapper.md  architecture.md  conversion-factory.md  release-checklist.md  wrapper-standard.md
docs/plans/: 2026-05-21-ai-interface-integration-roadmap.md  2026-05-21-generic-conversion-roadmap.md
examples/cashflower/: assumptions.yaml  simple_model.py
examples/catalogs/: actuarial-foss.yaml
examples/reserving/: sample_triangle.csv
registry/schemas/: aggregate-loss-input.schema.json  aggregate-loss-result.schema.json  domain.schema.json  envelope.schema.json  model-run-input.schema.json  model-run-result.schema.json  reference-query.schema.json  reference-result.schema.json  reserving-result.schema.json  reserving-triangle.schema.json  tool-manifest.schema.json
registry/tools/: actuarial-foss.yaml  aggregate.yaml  cashflower.yaml  chainladder-python.yaml  faslr.yaml  insurancerating-r.yaml  lifecontingencies-r.yaml  lifelib.yaml  loss-data-analytics.yaml  modelx.yaml  mortalitytables-jl.yaml
scripts/: run_actuarial_cli.py
skills/generic/: cashflow-cashflower.yaml  catalog-actuarial-foss.yaml  life-lifelib.yaml  life-modelx.yaml  lifecontingencies-r.yaml  loss-aggregate.yaml  mortality-tables-jl.yaml  (+4 more)
tests/: test_aggregate_cli.py  test_aggregate_contracts.py  test_cashflower_cli.py  test_catalog_importer.py  test_chainladder_cli.py  test_cli_help.py  test_downstream_manifest_preview.py  test_entrypoint_equivalence.py  test_envelope_contract.py  test_lifelib_cli.py  test_lifelib_manifest.py  test_mortality_manifest.py  test_optional_runtime_doctor.py  test_r_adapter_manifests.py  test_reference_packs.py  test_registry_contracts.py  test_reserving_contracts.py  test_skill_export.py  test_subprocess_json_contract.py
(+24 files in other folders)
